[package]
name = "captracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
axum = "0.5.13"
futures = "0.3.21"
lazy_static = "1.4.0"
mime_guess = "2.0.4"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
tokio = { version = "1.20.0", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
tower-http = { version = "0.3.4", features = ["cors", "fs"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
